--- a/style.css
+++ b/style.css
@@ -19,12 +19,16 @@ html {
 
 body {
     margin: 0;
-    background: radial-gradient(#9D5900, #3D2200);
+    background-image: linear-gradient(to bottom, rgba(0, 255, 213, 0.2), rgba(0, 255, 213, 0.2)), url("Assets/Images/africaBG.jpg");
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
 }
 
 .page-title {
-    color: #FF6D00;
-    font-family: Creepy, serif;
+    color: rgb(255, 123, 0, .8);
+    font-family: serif;
     font-weight: normal;
     text-align: center;
     font-size: 6em;
@@ -37,8 +41,8 @@ body {
 }
 
 .game-info {
-    font-family: Lunacy, serif;
-    color: #FFBB89;
+    font-family: serif;
+    color: black;
     font-size: 4em;
 }
 
@@ -71,9 +75,40 @@ body {
     overflow: hidden;
     backface-visibility: hidden;
     border-radius: 12px;
-    border-width: 1px;
+    border-width: 3px;
     border-style: solid;
+    /* border-color: black; */
     transition: transform 500ms ease-in-out;
+}
+
+.corner {
+    position: absolute;
+    width: 60px;
+    height: 60px;
+}
+
+.corner-top-left {
+    transform: rotate(90deg);
+    top: 0;
+    left: 0;
+}
+
+.corner-top-right {
+    transform: rotate(180deg);
+    top: 0;
+    right: 0;
+}
+
+.corner-bottom-left {
+    transform: rotate(0deg);
+    bottom: 0;
+    left: 0;
+}
+
+.corner-bottom-right {
+    transform: rotate(270deg);
+    bottom: 0;
+    right: 0;
 }
 
 .card.visible .card-back {
@@ -99,7 +134,7 @@ body {
     align-items: center;
     z-index: 100;
     color: #FF6D00;
-    font-family: Creepy, serif;
+    font-family: serif;
 }
 
 .overlay-text-small {
@@ -123,48 +158,43 @@ body {
     }
 }
 
-@keyframes dance {
+ @keyframes dance {
     0%, 100% {
-        transform: rotate(0);
+        transform: scale(1);
     }
     25% {
-        transform: rotate(-30deg);
+        transform: scale(1.05);
     }
     75% {
-        transform: rotate(30deg);
-    }
-}
-.lion {
-    max-width: 100%;
-    max-height: 100%;
+        transform: scale(1.1);
+    } 
+ }
+ 
+.imgFront {
+    width: 100%;
+    height: 100%;
     display: block;
 }
 
 .card-back {
-    background-color: black;
-    border-color: #FF6D00;
+    /* background-color: darkred; */
+    border-color: rgb(255, 123, 0);
+    /* opacity: 0.9; */
 }
 
 .card-front {
-    background-color: #FFBB89;
-    border-color: #333;
+    background: transparent;
+    border-color: black;
     transform: rotateY(180deg);
 }
 
 .card-value {
     transition: transform 100ms ease-in-out;
-    transform: scale(.9);
-}
-
-.card-front:hover .card-value {
     transform: scale(1);
 }
 
-.cob-web {
-    position: absolute;
-    width: 47px;
-    height: 47px;
-    transition: width 100ms ease-in-out, height 100ms ease-in-out;
+.card-front:hover .card-value {
+    transform: scale(1.1);
 }
 
 .card-face:hover .cob-web{
@@ -172,39 +202,96 @@ body {
     height: 52px;
 }
 
-.cob-web-top-left {
-    transform: rotate(270deg);
-    top: 0;
-    left: 0;
-}
-
-.cob-web-top-right {
-    top: 0;
-    right: 0;
-}
-
-.cob-web-bottom-left {
-    transform: rotate(180deg);
-    bottom: 0;
-    left: 0;
-}
-
-.cob-web-bottom-right {
-    transform: rotate(90deg);
-    bottom: 0;
-    right: 0;
-}
-
 .spider {
     align-self: flex-start;
-    transform: translateY(-10px);
+    transform: translateY(20px);
     transition: transform 100ms ease-in-out;
+    width: 100px;
+    height: 150px;
 }
 
 .card-back:hover .spider {
-    transform: translateY(0);
+    transform: scale(1.2) translateY(20px);
+}
+/* popUp */
+.modal {
+    display: none;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    border: 1px solid black;
+    border-radius: 10px;
+    z-index: 1000;
+    background-color: white;
+    width: 500px;
+    height: 200px;
+    max-width: 80%;
+}
+.modal.active {
+    display: block;
 }
 
+.modal-header {
+    padding: 10px 15px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-bottom: 1px solid black;
+}
+
+.modal-header .title {
+    font-size: 1.25rem;
+    font-weight: bold;
+}
+
+.modal-body {
+    padding: 10px 15px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+#modal-input {
+    width: 50%;
+    padding: 12px 20px;
+    margin: 10px;
+    box-sizing: border-box;
+    border: 2px solid black;
+    border-radius: 10px;
+    outline: none;
+    /* display: block; */
+}
+
+#modal-submit {
+    /* display: block; */
+    padding: 5px 15px;
+    background: #ccc;
+    /* border: ; */
+    cursor: pointer;
+    border-radius: 5px;
+    width: 50%;
+    height: 60px;
+}
+
+#overlay-popup {
+    position: fixed;
+    opacity: 0;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0, 0, 0, 0.5);
+    pointer-events: none;
+}
+
+#overlay-popup.active {
+    opacity: 1;
+    pointer-events: all;
+}
+
+/* media */
 @media (max-width: 1200px) {
     .game-container {
         grid-template-columns: repeat(4, auto);
