--- a/style.css
+++ b/style.css
@@ -1,13 +1,3 @@
-@font-face {
-    font-family: "Creepy";
-    src: url("Assets/Fonts/Creepy.woff") format("woff"), url("Assets/Fonts/Creepy.woff2") format("woff2")
-}
-
-@font-face {
-    font-family: "Lunacy";
-    src: url("Assets/Fonts/Lunacy.woff") format("woff"), url("Assets/Fonts/Lunacy.woff2") format("woff2")
-}
-
 * {
     box-sizing: border-box;
 }
@@ -28,7 +18,7 @@ body {
 
 .page-title {
     color: rgb(255, 123, 0, .8);
-    font-family: serif;
+    font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     font-weight: normal;
     text-align: center;
     font-size: 6em;
@@ -41,7 +31,7 @@ body {
 }
 
 .game-info {
-    font-family: serif;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     color: black;
     font-size: 4em;
 }
@@ -225,11 +215,20 @@ body {
     z-index: 1000;
     background-color: white;
     width: 500px;
-    height: 200px;
+    height: 220px;
     max-width: 80%;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
 }
 .modal.active {
     display: block;
+}
+
+.modal.right {
+    background-color: green;
+}
+
+.modal.wrong {
+    background-color: red;
 }
 
 .modal-header {
@@ -238,6 +237,8 @@ body {
     justify-content: center;
     align-items: center;
     border-bottom: 1px solid black;
+    background-color: white;
+    border-radius: 10px 10px 0px 0px;
 }
 
 .modal-header .title {
@@ -264,6 +265,11 @@ body {
     /* display: block; */
 }
 
+input[type="text"] {
+    font-size: 24px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
 #modal-submit {
     /* display: block; */
     padding: 5px 15px;
@@ -273,6 +279,10 @@ body {
     border-radius: 5px;
     width: 50%;
     height: 60px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 24px;
+    font-weight: bold;
+    background-color: rgb(255, 123, 0, .8);
 }
 
 #overlay-popup {
