--- a/style.css
+++ b/style.css
@@ -77,10 +77,12 @@ body {
 }
 
 .card.visible .card-back {
+    -webkit-transform: rotateY(-180deg);
     transform: rotateY(-180deg);
 }
 
 .card.visible .card-front {
+    -webkit-transform: rotateY(0);
     transform: rotateY(0);
 }
 
@@ -125,12 +127,15 @@ body {
 
 @keyframes dance {
     0%, 100% {
+        -webkit-transform: rotate(0);
         transform: rotate(0);
     }
     25% {
+        -webkit-transform: rotate(-30deg);
         transform: rotate(-30deg);
     }
     75% {
+        -webkit-transform: rotate(30deg);
         transform: rotate(30deg);
     }
 }
@@ -143,15 +148,18 @@ body {
 .card-front {
     background-color: #FFBB89;
     border-color: #333;
+    -webkit-transform: rotateY(180deg);
     transform: rotateY(180deg);
 }
 
 .card-value {
     transition: transform 100ms ease-in-out;
+    -webkit-transform: scale(.9);
     transform: scale(.9);
 }
 
 .card-front:hover .card-value {
+    -webkit-transform: scale(1);
     transform: scale(1);
 }
 
@@ -168,6 +176,7 @@ body {
 }
 
 .cob-web-top-left {
+    -webkit-transform: rotate(270deg);
     transform: rotate(270deg);
     top: 0;
     left: 0;
@@ -179,12 +188,14 @@ body {
 }
 
 .cob-web-bottom-left {
+    -webkit-transform: rotate(180deg);
     transform: rotate(180deg);
     bottom: 0;
     left: 0;
 }
 
 .cob-web-bottom-right {
+    -webkit-transform: rotate(90deg);
     transform: rotate(90deg);
     bottom: 0;
     right: 0;
@@ -192,11 +203,13 @@ body {
 
 .spider {
     align-self: flex-start;
+    -webkit-transform: translateY(-10px);
     transform: translateY(-10px);
     transition: transform 100ms ease-in-out;
 }
 
 .card-back:hover .spider {
+    -webkit-transform: translateY(0);
     transform: translateY(0);
 }
 
