--- a/style.css
+++ b/style.css
@@ -213,7 +213,7 @@ body {
     transform: translateY(0);
 }
 
-@media (max-width: 1200px) {
+/* @media (max-width: 1200px) {
     .game-container {
         grid-template-columns: repeat(4, auto);
     }
@@ -231,6 +231,6 @@ body {
 
     .game-info-container {
         flex-direction: column;
-        align-items: center;
+        align-items: center; */
     }
 }
