--- a/style.css
+++ b/style.css
@@ -76,7 +76,7 @@ body {
     transition: transform 500ms ease-in-out;
 }
 
-.card.visible .card-back {
+/* .card.visible .card-back {
     -webkit-transform: rotateY(-179.9deg);
     transform: rotateY(-179.9deg);
 }
@@ -84,7 +84,7 @@ body {
 .card.visible .card-front {
     -webkit-transform: rotateY(0);
     transform: rotateY(0);
-}
+} */
 
 .card.matched .card-value {
     animation: dance 1s linear infinite 500ms;
