--- a/style.css
+++ b/style.css
@@ -61,7 +61,7 @@ body {
     cursor: url("Assets/Cursors/GhostHover.cur"), auto;
 }
 
-.card-face {
+/* .card-face {
     position: absolute;
     width: 100%;
     height: 100%;
@@ -74,7 +74,7 @@ body {
     border-width: 1px;
     border-style: solid;
     transition: transform 500ms ease-in-out;
-}
+} */
 
 /* .card.visible .card-back {
     -webkit-transform: rotateY(-179.9deg);
@@ -86,9 +86,9 @@ body {
     transform: rotateY(0);
 } */
 
-.card.matched .card-value {
+/* .card.matched .card-value {
     animation: dance 1s linear infinite 500ms;
-}
+} */
 
 .overlay-text {
     display: none;
