--- a/style.css
+++ b/style.css
@@ -61,7 +61,7 @@ body {
     cursor: url("Assets/Cursors/GhostHover.cur"), auto;
 }
 
-/* .card-face {
+.card-face {
     position: absolute;
     width: 100%;
     height: 100%;
@@ -73,10 +73,11 @@ body {
     border-radius: 12px;
     border-width: 1px;
     border-style: solid;
+    -webkit-transition: -webkit-transform 500ms ease-in-out;
     transition: transform 500ms ease-in-out;
-} */
+}
 
-/* .card.visible .card-back {
+.card.visible .card-back {
     -webkit-transform: rotateY(-179.9deg);
     transform: rotateY(-179.9deg);
 }
@@ -86,9 +87,9 @@ body {
     transform: rotateY(0);
 } */
 
-/* .card.matched .card-value {
+.card.matched .card-value {
     animation: dance 1s linear infinite 500ms;
-} */
+}
 
 .overlay-text {
     display: none;
@@ -140,33 +141,35 @@ body {
     }
 }
 
-/* .card-back {
+.card-back {
     background-color: black;
     border-color: #FF6D00;
-} */
+}
 
-/* .card-front {
+.card-front {
     background-color: #FFBB89;
     border-color: #333;
     -webkit-transform: rotateY(179.9deg);
     transform: rotateY(179.9deg);
-} */
+}
 
-/* .card-value {
+.card-value {
+    -webkit-transition: -webkit-transform 100ms ease-in-out;
     transition: transform 100ms ease-in-out;
     -webkit-transform: scale(.9);
     transform: scale(.9);
-} */
+}
 
-/* .card-front:hover .card-value {
+.card-front:hover .card-value {
     -webkit-transform: scale(1);
     transform: scale(1);
-} */
+}
 
-/* .cob-web {
+.cob-web {
     position: absolute;
     width: 47px;
     height: 47px;
+    -webkit-transition: width 100ms ease-in-out, height 100ms ease-in-out;
     transition: width 100ms ease-in-out, height 100ms ease-in-out;
 }
 
@@ -205,13 +208,14 @@ body {
     align-self: flex-start;
     -webkit-transform: translateY(-10px);
     transform: translateY(-10px);
+    -webkit-transition: -webkit-transform 100ms ease-in-out;
     transition: transform 100ms ease-in-out;
 }
 
 .card-back:hover .spider {
     -webkit-transform: translateY(0);
     transform: translateY(0);
-} */
+} 
 
 @media (max-width: 1200px) {
     .game-container {
