--- a/style.css
+++ b/style.css
@@ -316,6 +316,18 @@ input[type="text"] {
         flex-direction: column;
         align-items: center;
     }
+
+    @keyframes overlay-grow {
+        from {
+            background-color: rgba(0, 0, 0, 0);
+            font-size: 0;
+        }
+        to {
+            background-color: rgba(0, 0, 0, .8);
+            font-size: 5em;
+        }
+    }
+
 }
 
 @media (max-width: 600px) {
@@ -326,5 +338,16 @@ input[type="text"] {
     .game-info-container {
         flex-direction: column;
         align-items: center;
+    }
+
+    @keyframes overlay-grow {
+        from {
+            background-color: rgba(0, 0, 0, 0);
+            font-size: 0;
+        }
+        to {
+            background-color: rgba(0, 0, 0, .8);
+            font-size: 2em;
+        }
     }
 }
